# Copyright Rivtower Technologies LLC.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "cloud-mmr"
version = "0.1.0"
authors = ["Yieazy <yuitta@163.com>", "Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"
description = "mmr rust lib from grin"
repository = "https://github.com/Pencil-Yao/cloud-mmr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
croaring = "0.4"
parking_lot = "0.12"
lmdb-zero = "0.4"
tempfile = "3.1"
serde = "1.0"
serde_derive = "1.0"
byteorder = "1.0"
bytes = "1.0"
hex = "0.4"
memmap = "0.7"
thiserror = "1.0"
toml = "0.5"
bitcoin_hashes = { version = "0.12", features = ["serde"] }
